<resources>
    <string name="app_name">FindYourDoctor</string>
    <string name="_6207484240">6207484240</string>
    <string name="login">login</string>
    <string name="otp">OTP</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="textview">TextView</string>
    <string name="dr_dummy">Dr. Dummy</string>
    <string name="genral_physician">Genral physician</string>
    <string name="_15_years_exp">15 years exp</string>
    <string name="book_your_slot">Book your slot</string>
    <string name="i_can_speak_english_hindi">I can speak: English, Hindi</string>
    <string name="title_activity_dash_board_">DashBoard_Activity</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Messages</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="chat_now">Chat Now</string>
    <string name="_12323454">12323454</string>
    <string name="click_to_pay">Click to Pay</string>
    <string name="gender">Gender</string>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>

    </string-array>
    <string name="Blood_Group" />
    <string-array name="Blood_Group">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string name="Martial_status" />
    <string-array name="Martial_status">
        <item>Married</item>
        <item>Unmarried</item>
    </string-array>

</resources>